@@ -1,3 +1,8 @@
+2007-05-10  Sebastien Merle  <sebastien@fluendo.com>
+
+	* flumotion/common/enum.py: 
+	Corrected a bug when creating a generic enum instance.
+
 2007-05-10  Zaheer Abbas Merali  <<zaheerabbas at merali dot org>>
 
 	* flumotion/component/combiners/switch/switch.py (Switch, SingleSwitch,
